# srp_md

./: .gitignore  .gitmodules  README.md
srp_md/: CMakeLists.txt  package.xml  setup.py
srp_md/cmake_modules/: FindGraphviz.cmake
srp_md/config/: feature_space.yaml  feature_space_class_only.yaml  grocery.world  grocery_map.pgm  grocery_map.yaml
srp_md/include/srp_md/: actions.h  factor_graph_worker.h  object.h  plane_detector.h  pose_to_scene_graph.h  ros_service_factor.h  scene_graph.h
srp_md/include/srp_md/action_servers/: AttachObjectAS.h  free_space_finder_as.h  get_stack_pose_as.h  get_table_as.h  grasploc_pick_as.h  move_to_pose_as.h  move_to_relative_pose_as.h  point_cloud_as.h  relative_cartesian_move_as.h
srp_md/launch/: experiment.launch  grocery_experiment.launch  simulated_experiment.launch  srp_md.launch
srp_md/model/grocery_models/around_belt/: model.config  model.sdf
srp_md/model/grocery_models/box/: model.config  model.sdf
srp_md/model/grocery_models/conveyor_belt/: model.config  model.sdf
srp_md/model/grocery_models/cracker_test/: model.sdf
srp_md/model/grocery_models/gelatin_test/: model.sdf
srp_md/model/grocery_models/grocery_box/: model.config  model.sdf
srp_md/model/grocery_models/grocery_box/meshes/: Grocery Box.dae
srp_md/model/grocery_models/grocery_box_ori/: model.config  model.sdf
srp_md/model/grocery_models/meat_test/: model.sdf
srp_md/model/grocery_models/mustard_test/: model.sdf
srp_md/model/grocery_models/soup_test/: model.sdf
srp_md/model/grocery_models/static_thing/: model.config  model.sdf
srp_md/model/grocery_models/static_thing_no_collision/: model.config  model.sdf
srp_md/model/grocery_models/sugar_test/: model.sdf
srp_md/model/grocery_models/table/: model.config  model.sdf
srp_md/model/grocery_models/table_1/: model.config  model.sdf
srp_md/model/grocery_models/table_2/: model.config  model.sdf
srp_md/model/grocery_models/wall/: model.config  model.sdf
srp_md/msg/: Factor.msg  ObjectPair.msg  Var.msg
srp_md/pddl/domains/: domain.pddl
srp_md/scripts/: block_tower_experiment  change_obj_feature_space  plot_experiment  plot_sim_experiment  pretty_plotter  run_all_sim_experiments  run_experiment  simulate_experiment  start_n_factor_graph_nodes
srp_md/src/: action_node.cpp  actions.cpp  factor_graph_node.cpp  factor_graph_worker.cpp  plan_task.cpp  plane_detector.cpp  plane_detector.cpp.bak  plane_detector_node.cpp  pose_to_scene_graph.cpp  pose_to_scene_graph_node.cpp  ros_service_factor.cpp  srp_md_node
srp_md/src/nodes/: conveyor_belt_experiment  srp_md_node  test_actions  test_dope
srp_md/src/srp_md/: __init__.py  factor_graph.py  geometry.py  learn.py  pcd_io.py  scene_graph.py  srp_md.py  srp_md_log.py  utils.py
srp_md/src/srp_md/act/: __init__.py  act.py  actions.py
srp_md/src/srp_md/evaluate/: __init__.py  adapt_goal_evaluator.py  goal_evaluator.py
srp_md/src/srp_md/goal/: __init__.py  factor_goal_generator.py  fake_goal_generator.py  goal_generator.py
srp_md/src/srp_md/learn/: __init__.py  factor_graph_learn.py  factor_learners.py  fake_learn.py  learn.py  version_space_learn.py
srp_md/src/srp_md/plan/: __init__.py  plan.py
srp_md/src/srp_md/sense/: __init__.py  abstract_world_sensor.py  block_tower2_sensor.py  block_tower_sensor.py  block_world_sensor.py  book_world_sensor.py  can_tower_sensor.py  dope_sense.py  fake_sense.py  known_example.py  pen_world_sensor.py  posecnn_sensor.py  sense.py
srp_md/src/srp_md/ui/: __init__.py  controller.py  pyqt_format.ui  pyqt_format_vid.ui  pyqt_view.py  term_view.py  view.py
srp_md/src/srp_md/ui/web_gui/: SUI_GUI.html  gui.js  index.html
srp_md/srv/: EvalFactor.srv  GetGoal.srv
srp_md_msgs/: CMakeLists.txt  package.xml
srp_md_msgs/action/: AttachObject.action  CropPC.action  DetectPlane.action  FreeSpaceFinder.action  GetStackPose.action  GetTable.action  GrasplocPick.action  MoveToFirstPose.action  MoveToPose.action  MoveToRelativePose.action  RelativeCartesianMove.action  TFPC.action
srp_md_msgs/msg/: Factor.msg
srp_md_msgs/srv/: GetGoal.srv  PoseToSceneGraph.srv
