<?xml version="1.0"?>
<package format="2">
  <name>srp_md</name>
  <version>0.0.0</version>
  <description>The srp_md package</description>
  <maintainer email="kdfrench@umich.edu">Kevin French</maintainer>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>rospy</depend>
  <depend>srp_md_msgs</depend>
  <depend>dope_msgs</depend>
  <depend>tf</depend>
  <depend>tf_conversions</depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
